# odpi-hs

./: LICENSE  README.md  cabal.project  shell.nix
nix/: nixpkgs.nix
odpi-libdpi/: ChangeLog.md  odpi-libdpi.cabal
odpi-libdpi/src/Database/Odpi/: LibDpi.chs
odpi-simple/: ChangeLog.md  odpi-simple.cabal
odpi-simple/src/Database/: Odpi.hs
odpi-simple/src/Database/Odpi/: Connection.hs  Context.hs  Data.hs  FromField.hs  FromRow.hs  NativeValue.hs  Pool.hs  Statement.hs  Types.hs  Util.hs
odpi-simple/src/Database/Odpi/FromRow/: Generic.hs
odpi-streaming/: ChangeLog.md  odpi-streaming.cabal
odpi-streaming/src/Database/Odpi/: Streaming.hs
